# pysystemair

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
pysystemair/: models.py  pysystemair.py  registers.py
test/: test.py
