[tool.poetry]
name = "pysystemair"
version = "0.1.1"
description = "Python package to interface a SystamAir SAVE VTR ventilation through modbus. Heavily insipired by pyflexit (https://github.com/Sabesto/pyflexit). Made with the purpose of working with a home assistant component"
authors = ["mvheimburg <heimburg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.971"
asyncio = "^3.4.3"
pydantic = "^1.9.1"
pymodbus = "^2.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
